tests/snapshots/regression/recovery__t16_module_missing_lbrace_contextual.snap
---
source: tests/integration/regression_snapshots.rs
assertion_line: 132
---
$ flux --no-cache tests/fixtures/recovery/t16_module_missing_lbrace_contextual.flx
exit_code: 1

[ 1 of 11] Compiling  Assert
[ 2 of 11] Compiling  Array
[ 3 of 11] Compiling  List
[ 4 of 11] Compiling  Either
[ 5 of 11] Compiling  IO
[ 6 of 11] Compiling  Math
[ 7 of 11] Compiling  Numeric
[ 8 of 11] Compiling  Option
[ 9 of 11] Compiling  Primops
[10 of 11] Compiling  String
• 1 error • tests/fixtures/recovery/t16_module_missing_lbrace_contextual.flx
error[E034]: Missing Module Body

This module body needs to start with `{`.

  tests/fixtures/recovery/t16_module_missing_lbrace_contextual.flx:2:1
  |
2 | let after = 1
  | ^^^

Hint:
  Module declarations use `module Name { ... }`.

Note:
  while parsing module `Demo`
